--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Collector</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header class="navbar-fixed">
@@ -14,7 +17,7 @@
               <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Car Collector</a></li>
             </ul>
             <ul class="right">
-              <li><a href="/about">About</a></li>
+              <!-- <li><a href="/about">About</a></li> -->
               <li><a href="/cars">View All My Cars</a></li>
             </ul>
           </div>
