--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -11,4 +11,5 @@
         </div>
     </div>
     {% endfor %}
+<a class="btn-floating btn-large waves-effect waves-light grey darken-1"><i class="material-icons">add</i></a>
 {% endblock %}
