--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,7 +18,7 @@
               <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Car Collector</a></li>
             </ul>
             <ul class="right">
-              <!-- <li><a href="/about">About</a></li> -->
+              <li><a href="/about">About</a></li>
               <li><a href="/cars">View All My Cars</a></li>
             </ul>
           </div>
