--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>My Cars</h1>
     {% for car in cars %}
-    <div class="card">
+    <div class="card flow-text">
         <div class="card-content">
             <span class="card-title">{{ car.make }} {{ car.model }}</span>
             <p>Year: {{ car.year }}</p>
