--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -1,15 +1,18 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>My Cars</h1>
-    {% for car in cars %}
-    <div class="card flow-text">
-        <div class="card-content">
-            <span class="card-title">{{ car.make }} {{ car.model }}</span>
-            <p>Year: {{ car.year }}</p>
-            <p>Color: <span style="font-weight: bold;">{{ car.color }}</span></p>
-            <p>Mileage: {{ car.milage }}</p>
-        </div>
-    </div>
-    {% endfor %}
-<a class="btn-floating btn-large waves-effect waves-light grey darken-1"><i class="material-icons">add</i></a>
+{% extends 'base.html' %} {% block content %}
+<h1>My Cars</h1>
+{% for car in cars %}
+<div class="card flow-text">
+  <a href="{% url 'details' car.id %}"
+    ><div class="card-content">
+      <span class="card-title">{{ car.make }} {{ car.model }}</span>
+      <p>Year: {{ car.year }}</p>
+      <p>Color: <span style="font-weight: bold">{{ car.color }}</span></p>
+      <p>Mileage: {{ car.milage }}</p>
+    </div></a
+  >
+</div>
+{% endfor %}
+<a class="btn-floating btn-large waves-effect waves-light grey darken-1"
+  ><i class="material-icons">add</i></a
+>
 {% endblock %}
