spacing, part of lab complete

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,9 +22,7 @@
         <div class="nav-wrapper light-blue darken-2">
           <ul>
             <li>
-              <a href="{% url 'home' %}" class="left brand-logo"
-                >&nbsp;&nbsp;Car Collector</a
-              >
+              <a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;Car Collector</a>
             </li>
           </ul>
           <ul class="right">
