--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,11 +22,14 @@
         <div class="nav-wrapper light-blue darken-2">
           <ul>
             <li>
-              <a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;Car Collector</a>
+              <a href="{% url 'home' %}" class="left brand-logo"
+                >&nbsp;&nbsp;Car Collector</a
+              >
             </li>
           </ul>
           <ul class="right">
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'car_create' %}">Add Car</a></li>
             <li><a href="{% url 'cars' %}">View All My Cars</a></li>
           </ul>
         </div>
