--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -7,12 +7,14 @@
       <span class="card-title">{{ car.make }} {{ car.model }}</span>
       <p>Year: {{ car.year }}</p>
       <p>Color: <span style="font-weight: bold">{{ car.color }}</span></p>
-      <p>Mileage: {{ car.milage }}</p>
+      <p>Mileage: {{ car.milage|floatformat:"-3g" }}</p>
     </div></a
   >
 </div>
 {% endfor %}
-<a class="btn-floating btn-large waves-effect waves-light grey darken-1"
+<a
+  class="btn-floating btn-large waves-effect waves-light grey darken-1"
+  href="{% url 'car_create' %}"
   ><i class="material-icons">add</i></a
 >
 {% endblock %}
