--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -2,7 +2,7 @@
 <h1>My Cars</h1>
 {% for car in cars %}
 <div class="card flow-text">
-  <a href="{% url 'details' car.id %}"
+  <a href="{% url 'details' car.id %}" class="black-text"
     ><div class="card-content">
       <span class="card-title">{{ car.make }} {{ car.model }}</span>
       <p>Year: {{ car.year }}</p>
