--- a/main_app/templates/cars/car_details.html
+++ b/main_app/templates/cars/car_details.html
@@ -1,12 +1,17 @@
-{% extends 'base.html' %} {% block content %}
-<a href="{% url 'cars' %}">Back</a>
+{% extends 'base.html' %} 
+{% block content %}
+<h5><a href="{% url 'details' car.id %}">Back</a></h5>
 <h1>Details</h1>
 <div class="card">
   <div class="card-content">
     <h3>{{ car.make }} {{ car.model }}</h3>
     <p>Year: {{ car.year }}</p>
-    <p>Color: <span style="font-weight: bold">{{ car.color }}</span></p>
+    <p>Color: <span style="font-weight: bold;">{{ car.color }}</span></p>
     <p>Mileage: {{ car.milage|floatformat:"-3g" }}</p>
+  </div>
+  <div class="card-action">
+    <a href="{% url 'car_update' car.id %}">Edit</a>
+    <a href="{% url 'car_delete' car.id %}">Delete</a>
   </div>
 </div>
 
