Revert "color for btns, path changed for detail page"
This reverts commit 700d5363266b350470c6798b49c96ff181e78ad0.

--- a/main_app/templates/cars/car_details.html
+++ b/main_app/templates/cars/car_details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h5><a href="{% url 'cars' %}">Back</a></h5>
+<h5><a href="{% url 'details' car.id %}">Back</a></h5>
 <h1>Details</h1>
 <div class="card">
   <div class="card-content">
