--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -7,7 +7,7 @@
       <span class="card-title">{{ car.make }} {{ car.model }}</span>
       <p>Year: {{ car.year }}</p>
       <p>Color: <span style="font-weight: bold">{{ car.color }}</span></p>
-      <p>Mileage: {{ car.milage|floatformat:"-3g" }}</p>
+      <p>Mileage: {{ car.mileage|floatformat:"-3g" }}</p>
     </div></a
   >
 </div>
