--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,9 +29,11 @@
             {% if user.is_authenticated %}
             <li><a href="{% url 'car_create' %}">Add Car</a></li>
             <li><a href="{% url 'cars' %}">View All My Cars</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li style="font-style: italic;">&nbsp;Hello, {{ user.username }}&nbsp;&nbsp;</li>
             {% else %}
             <li><a href="{% url 'login' %}">Log In</a></li>
-            <!-- <li><a href="{% url 'signup' %}">Sign Up</a></li> -->
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
             {% endif %}
           </ul>
           <!-- home btn for mobile -->
@@ -47,6 +49,7 @@
             {% if user.is_authenticated %}
             <li><a href="{% url 'car_create' %}">Add Car</a></li>
             <li><a href="{% url 'cars' %}">View All My Cars</a></li>
+            <li style="font-style: italic;" class="container right">Hello, {{ user.username }}</li>
             {% else %}
             <li><a href="{% url 'login' %}">Log In</a></li>
             <!-- <li><a href="{% url 'signup' %}">Sign Up</a></li> -->
