--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -7,5 +7,7 @@
     {{ form.as_p }}
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit" class="btn light-blue">Log In</button>
+    <a href="{% url 'signup' %}">Don't have an account? Sign up</a>
 </form>
+
 {% endblock %}
