--- a/main_app/templates/cars/cars_list.html
+++ b/main_app/templates/cars/cars_list.html
@@ -1,20 +1,30 @@
 {% extends 'base.html' %} {% block content %}
 <h1>My Cars</h1>
-{% for car in cars %}
-<div class="card flow-text">
-  <a href="{% url 'details' car.id %}" class="black-text"
-    ><div class="card-content hoverable">
-      <span class="card-title">{{ car.make }} {{ car.model }}</span>
-      <p>Year: {{ car.year }}</p>
-      <p>Color: {{ car.color }}</p>
-      <p>Mileage: {{ car.mileage|floatformat:"-3g" }}</p>
-    </div></a
-  >
-</div>
-{% endfor %}
 <a
   class="btn-floating btn-large waves-effect waves-light grey darken-1"
   href="{% url 'car_create' %}"
   ><i class="material-icons">add</i></a
 >
+<div class="row">
+{% for car in cars %}
+<a href="{% url 'details' car.id %}" class="black-text">
+  <div class="col s12 m6 black-text">
+    <div class="card hoverable">
+      <div class="card-image">
+        <img src="{{car.img}}">
+      </div>
+      <div class="card-content">
+        <p>{{ car.year }} {{ car.make }} {{ car.model }}</p>
+        <p>Mileage: {{ car.mileage }}</p>
+        <p>Color: {{ car.color }}</p>
+      </div>
+      <div class="card-action">
+        <a href="#">{{ car.user.username }}</a>
+      </div>
+    </div>
+  </div>
+</a>
+{% endfor %}
+</div>
+
 {% endblock %}
