--- a/main_app/templates/cars/explore_list.html
+++ b/main_app/templates/cars/explore_list.html
@@ -2,22 +2,20 @@
 <h1>Explore  Cars</h1>
 <div class="row">
 {% for car in cars %}
-<div class="col s6">
-<div class="card flow-text">
-    <div class="card-content">
-      <span class="card-title"><strong>{{ car.make }}</strong> {{ car.model }}</span>
-      <p>Year: {{ car.year }}</p>
-      <p>Color: {{ car.color }}</p>
-      <!-- {% if car.color == 'White' %}
-      <p>Color: <span style="color: black;">{{ car.color }}</span></p>
-      {% else %}
-      <p>Color: <span style="color: {{car.color}};">{{ car.color }}</span></p>
-      {% endif %} -->
-      <p>Mileage: {{ car.mileage|floatformat:"-3g" }}</p>
-      <!-- <p>Owned by:% url 'user_cars' car.user.id%{{ car.user.username }}</p> -->
-      <p>Owned by: {{ car.user.username }}</p>
+<div class="col s12 m6 black-text">
+  <div class="card hoverable">
+    <div class="card-image">
+      <img src="{{car.img}}">
     </div>
-</div>
+    <div class="card-content">
+      <p>{{ car.year }} {{ car.make }} {{ car.model }}</p>
+      <p>Mileage: {{ car.mileage }}</p>
+      <p>Color: {{ car.color }}</p>
+    </div>
+    <div class="card-action">
+      <a href="#">{{ car.user.username }}</a>
+    </div>
+  </div>
 </div>
 {% endfor %}
 </div>
